# Kaleidoscope

./: .gitignore  Cargo.toml  README.md
src/: main.rs  parse.rs  widgets.rs
src/assets/pages/home_page/: index.html
src/assets/pages/invalid_page/: index.html
