[package]
name = "Kaleidoscope"
version = "0.1.0"
authors = ["Nathan Heang"]
edition = "2024"
rust-version = "1.94.1"
description = "Scope the web privately, performantly, and beautifully."
readme = "README.md"
repository = "https://github.com/NathanHeang/Kaleidoscope"
license = "MIT"

[dependencies]
tokio = {version = "1.51.1", features = ["fs", "rt", "rt-multi-thread", "macros"]}
futures-util = "0.3.32"
xilem = "0.4.0"
reqwest = { version = "0.13.2", features = ["stream", "rustls"] }
astral-tl = "0.7.11"
lightningcss = "1.0.0-alpha.71"
